--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -95,7 +95,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="ExercisePages\Exercise01.cshtml" />
-    <Content Include="ExercisePages\Exercise02.cshtml" />
+    <Content Include="ExercisePages\Exercise02_A.cshtml" />
     <Content Include="Ex01-04-Instructions.docx" />
     <Content Include="CPSC1517-Jan-2020 Planning Calendar-RLaw.doc" />
     <Content Include="Scripts\bootstrap.bundle.js" />
@@ -121,6 +121,8 @@
     <Content Include="Scripts\esm\popper.js.map" />
     <Content Include="Scripts\esm\popper-utils.min.js.map" />
     <Content Include="Scripts\esm\popper-utils.js.map" />
+    <Content Include="ExercisePages\Exercise02_B.cshtml" />
+    <Content Include="ExercisePages\Exercise02_C.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
