--- a/WebApp/WebApp.csproj
+++ b/WebApp/WebApp.csproj
@@ -123,6 +123,7 @@
     <Content Include="Scripts\esm\popper-utils.js.map" />
     <Content Include="ExercisePages\Exercise02_B.cshtml" />
     <Content Include="ExercisePages\Exercise02_C.cshtml" />
+    <Content Include="ExercisePages\Exercise03.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
